.vscode/uv4.log
*** Using Compiler 'V6.19', folder: 'D:\keil5\ARM\ARMCLANG\Bin'
Rebuild target 'Target 1'
assembling startup_stm32f10x_md.s...
Start/core_cm3.c(445): error: non-ASM statement in naked function is not supported
  uint32_t result=0;
  ^
Start/core_cm3.c(442): note: attribute is here
uint32_t __get_PSP(void) __attribute__( ( naked ) );
                                          ^
Start/core_cm3.c(465): error: parameter references not allowed in naked functions
                  "BX  lr     \n\t" : : "r" (topOfProcStack) );
                                             ^
Start/core_cm3.c(461): note: attribute is here
void __set_PSP(uint32_t topOfProcStack) __attribute__( ( naked ) );
                                                         ^
Start/core_cm3.c(479): error: non-ASM statement in naked function is not supported
  uint32_t result=0;
  ^
Start/core_cm3.c(476): note: attribute is here
uint32_t __get_MSP(void) __attribute__( ( naked ) );
                                          ^
Start/core_cm3.c(499): error: parameter references not allowed in naked functions
                  "BX  lr     \n\t" : : "r" (topOfMainStack) );
                                             ^
Start/core_cm3.c(495): note: attribute is here
void __set_MSP(uint32_t topOfMainStack) __attribute__( ( naked ) );
                                                         ^
4 errors generated.
compiling core_cm3.c...
compiling stm32f10x_bkp.c...
compiling stm32f10x_crc.c...
compiling stm32f10x_dma.c...
compiling stm32f10x_dbgmcu.c...
compiling stm32f10x_dac.c...
compiling misc.c...
compiling system_stm32f10x.c...
compiling stm32f10x_exti.c...
compiling stm32f10x_cec.c...
compiling stm32f10x_gpio.c...
compiling stm32f10x_fsmc.c...
compiling stm32f10x_adc.c...
compiling stm32f10x_can.c...
compiling stm32f10x_iwdg.c...
compiling stm32f10x_i2c.c...
compiling stm32f10x_pwr.c...
compiling stm32f10x_rtc.c...
compiling stm32f10x_flash.c...
compiling stm32f10x_rcc.c...
compiling stm32f10x_wwdg.c...
compiling stm32f10x_sdio.c...
compiling stm32f10x_spi.c...
compiling Led.c...
compiling InputCompare.c...
compiling stm32f10x_usart.c...
compiling PWM.c...
compiling AD.c...
compiling Tim_Encoder.c...
compiling mpu6050.c...
compiling OLED.c...
compiling mpuiic.c...
compiling MPU_Exti.c...
compiling stm32f10x_tim.c...
compiling Delay.c...
compiling xunji.c...
System/sys.c(33): error: expected '(' after 'asm'
__asm void MSR_MSP(u32 addr) 
      ^
System/sys.c(33): error: expected ';' after top-level asm block
__asm void MSR_MSP(u32 addr) 
     ^
     ;
System/sys.c(35): error: use of undeclared identifier 'MSR'
    MSR MSP, r0                         //set Main Stack value
    ^
3 errors generated.
compiling sys.c...
compiling Serial.c...
compiling PID_Control.c...
compiling inv_mpu_dmp_motion_driver.c...
compiling stm32f10x_it.c...
compiling main.c...
compiling inv_mpu.c...
".\Objects\Ä£°å.axf" - 7 Error(s), 0 Warning(s).
Target not created.
Build Time Elapsed:  00:00:03
